syntax = "proto3";

option csharp_namespace = "MSBuildProjectTools.ProjectServer.Protocol.Contracts";

package projects;

// Request: get a list all of projects loaded by the project server.
message ListProjectsRequest {
    // No fields.
}

// Response: a list of loaded projects
message ListProjectsResponse {
  repeated ProjectMetadata projects = 1;
}

message ProjectMetadata {
    string name = 1;
    string location = 2;
    ProjectStatus status = 3;
}

enum ProjectStatus {
    unknown = 0;
    valid = 1;
    invalid = 2;
}
